editors/tree-sitter/grammar.js
    source_file: ($) => repeat($._item),

    // ----- items ---------------------------------------------------------

    _item: ($) =>
      choice(
        $.import_declaration,
        $.namespace_declaration,
        $.function_definition,
        $.constant_declaration,
        $.struct_declaration,
        $.class_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.construct_declaration,
        $.family_conformance_declaration,
        $.extend_declaration,
        $.type_alias_declaration,
        $.distinct_declaration,
        $.package_declaration,
        $.macro_declaration,
        $.comptime_macro_declaration,
        $.comptime_function_declaration,
        $.macro_invocation,
      ),

    // `let Name[: T] = value` at module scope: one value computed once for
    // the program. There is no module-scope `var`.
    attribute: ($) =>
      seq(
        '@',
        field('name', choice($.identifier, $.qualified_attribute_name)),
        optional(choice($.attribute_arguments, $.attribute_block)),
      ),

    qualified_attribute_name: ($) =>
      seq($.identifier, repeat1(seq('.', $.identifier))),

    // The parser skips a balanced `(...)` without interpreting it, so the
    // contents are arbitrary balanced token soup. Strings are recognized as
    // themselves so a `(` inside one cannot unbalance the group.
    attribute_arguments: ($) =>
      seq(
        '(',
        repeat(
          choice($.attribute_arguments, $.string_literal, $._attribute_token),
        ),
        ')',
      ),

    _attribute_token: (_$) => token(prec(-1, /[^()"]+/)),

    // `{ library: ffimath, symbol: ffi_add, abi: c, retains: desc }` — the
    // `@FFI.*` and `@Export` block. Fields are comma-separated with a
    // trailing comma allowed; a `retains:` field repeats.
    attribute_block: ($) =>
      seq('{', commaSepTrailing($.attribute_field), '}'),

    // The value grammar follows the key, exactly as the parser dispatches it:
    // `target`/`element`/`result` name a type, `params` a bracketed type list,
    // and every other key a bare word, an integer, or a string.
    attribute_field: ($) =>
      seq(
        choice(
          seq(
            field(
              'key',
              alias(choice('target', 'element', 'result'), $.identifier),
            ),
            ':',
            field('value', $._type),
          ),
          seq(
            field('key', alias('params', $.identifier)),
            ':',
            field('value', $.attribute_type_list),
          ),
          seq(
            field('key', $.identifier),
            ':',
            field(
              'value',
              choice($.identifier, $.integer_literal, $.string_literal),
            ),
          ),
        ),
      ),

    attribute_type_list: ($) => seq('[', commaSepTrailing($._type), ']'),

    // ----- functions -----------------------------------------------------

    // A bodyless function is a trait requirement, an `@Required` construct
    // member, or an `@FFI.*` declaration — its declaration ends with the
    // signature. Every other function carries a block.
    function_definition: ($) =>
      prec.right(
        seq(
          repeat($.attribute),
          optional('async'),
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.type_parameters)),
          field('parameters', $.parameters),
          optional(field('return_type', $.return_type)),
          optional(field('body', $.block)),
        ),
      ),

    parameters: ($) =>
      seq(
        '(',
        optional(
          seq(
            optional(seq($.self_parameter, optional(','))),
            commaSepTrailing($.parameter),
          ),
        ),
        ')',
      ),

    // A method's receiver: `borrow self` or `borrow mut self`. A bare `self` is
    // KPAR075, so it parses here and is refused in the compiler.
    parameter: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        optional(field('ownership', $.ownership_modifier)),
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    return_type: ($) => seq(choice('->', ':'), $._type),

    // ----- types ---------------------------------------------------------

    _type: ($) =>
      choice(
        $.array_type,
        $.function_type,
        $.existential_type,
        $.generic_type,
        $._type_path,
      ),

    // `some Widget` / `Any Widget`: a value of some declaration backing the
    // family. Bare `Any` is the top type and stays an ordinary type name.
    function_type: ($) =>
      seq(
        '(',
        commaSepTrailing(
          seq(optional(field('ownership', $.ownership_modifier)), $._type),
        ),
        ')',
        '->',
        field('result', $._type),
      ),

    // ----- aggregates ----------------------------------------------------

    // `struct Name[: Trait, …] { <member>* }`. `:` is always conformance.
    struct_declaration: ($) =>
      seq(
        repeat($.attribute),
        'struct',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        field('body', $.struct_body),
      ),

    struct_body: ($) => seq('{', repeat($._aggregate_member), '}'),

    // `class Name[: Trait, …] [extends Parent, …] { <member>* }`. Traits first,
    // parents second.
    class_declaration: ($) =>
      seq(
        repeat($.attribute),
        'class',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        optional(field('conforms', $.conformance_list)),
        optional(field('extends', $.extends_list)),
        field('body', $.class_body),
      ),

    class_body: ($) =>
      seq(
        '{',
        repeat(choice($._aggregate_member, $.override_member)),
        '}',
      ),

    _aggregate_member: ($) => choice($.field_declaration, $.function_definition),

    field_declaration: ($) =>
      seq(
        choice('let', 'var'),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    // `override let rate = 5` rebinds an inherited default; `override function`
    // replaces an inherited method.
    block: ($) =>
      prec.dynamic(
        1,
        prec(1, seq('{', repeat($._statement), '}')),
      ),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.match_statement,
        $.attempt_statement,
        $.expression_statement,
      ),

    variable_declaration: ($) =>
      seq(
        choice('let', 'var'),
        field('name', $.identifier),
        optional(
          seq(
            ':',
            optional(field('ownership', $.ownership_modifier)),
            field('type', $._type),
          ),
        ),
        '=',
        field('value', $._expression),
      ),

    // The target is written with expression syntax (`p`, `p.x`, `xs[i]`);
    // whether it names a place is a question for semantics.
    return_statement: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),

    expression_statement: ($) => prec(-1, $._expression),

    // ----- expressions ---------------------------------------------------

    _expression: ($) =>
      choice(
        $.conditional_expression,
        $.binary_expression,
        $.type_test_expression,
        $.type_cast_expression,
        $.unary_expression,
        $.ownership_expression,
        $.try_expression,
        $.call_expression,
        $.method_call_expression,
        $.main_thread_operation,
        $.construction_expression,
        $.trailing_closure_expression,
        $.macro_invocation,
        $.quote_block,
        $.field_expression,
        $.index_expression,
        $.closure_expression,
        $.parenthesized_expression,
        $.array_literal,
        $.dot_member_expression,
        $._value_name,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
      ),

    // `move` and `copy` are contextual: each is an operator only when an
    // operand follows, and an ordinary name everywhere else.
    binary_expression: ($) => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.bitOr, '|'],
        [PREC.bitXor, '^'],
        [PREC.bitAnd, '&'],
        [PREC.equality, choice('==', '!=')],
        [PREC.comparison, choice('<', '<=', '>', '>=')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(field('function', $._callable), field('arguments', $.arguments)),
      ),

    // The callee is a bare name; `a.b(x)` is a `method_call_expression`.
    _callable: ($) => $._value_name,

    // One rung above the rest of the postfix chain, which is what settles
    // `p.sum()` as a method call rather than a field read that is then called.
    arguments: ($) =>
      seq(
        '(',
        commaSepTrailing(choice($.labeled_argument, $._expression)),
        ')',
      ),

    // A leading identifier is a label only when a binder follows it, so `f(x)`
    // keeps `x` as an ordinary expression. `=` is canonical and `:` stays
    // valid.
    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    // ----- tokens --------------------------------------------------------

    // ASCII only; a bare `_` is a legal identifier. A non-ASCII byte is
    // TokenKind::Unknown + KLEX001.
    identifier: (_$) => /[A-Za-z_][A-Za-z0-9_]*/,

    integer_literal: (_$) => token(choice(/0[xX][0-9a-fA-F]+/, /[0-9]+/)),

    // Digits DOT digits, both sides required: `1.` is an integer plus a stray
    // dot, and `1e5` is an integer plus the identifier `e5`.
    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($._string_content, $.escape_sequence)),
        token.immediate('"'),
      ),

    _string_content: (_$) => token.immediate(prec(1, /[^"\\\n]+/)),

    // Exactly the escapes the lexer decodes: `\n \t \r \e \0 \" \\` and a
    // backslash before a newline (line continuation). Anything else is
    // KLEX003, so it stays out of the literal here and must ERROR.
    comment: (_$) => token(seq('//', /[^\n]*/)),

    // `/* … */`, nesting: a `/*` inside opens another comment that its own
    // `*/` closes. The lexer keeps a depth counter (KLEX004 when the file
    // ends inside one); the grammar recurses instead.
